Добавление к проекту от 01.12.22

--- a/1.EDА.ipynb
+++ b/1.EDА.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "a3b4096b",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "6572d140",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "4.0                    220.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "48f218f2",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "4.0                 0.0          5.0               57.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "b9353162",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "4.0               57.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "694df016",
    "metadata": {
     "scrolled": true
@@ -527,7 +527,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "cf469784",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "c9c529bf",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "d1396b7b",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "a8d61e39",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
        "max             90.000000    14.440522         103.988901  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "d96b2b14",
    "metadata": {},
    "outputs": [
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "b9c824e6",
    "metadata": {},
    "outputs": [],
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "4fbb4679",
    "metadata": {
     "scrolled": true
@@ -952,10 +952,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x12f9818deb0>"
+       "<seaborn.axisgrid.PairGrid at 0x12f9ead8dc0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "id": "8b9cc96f",
    "metadata": {
     "scrolled": true
@@ -988,7 +988,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1018,7 +1018,7 @@
     "1. Исходный dataset состоит из 1023 строк и включает в себя 13 признаков из которых два являются целевыми.\n",
     "2. Все признаки являются числовыми.\n",
     "3. Исходный dataset не содержит пропущенных данных и дубликатов строк.\n",
-    "4. Все признаки за исключением \"Угол нашивки, град\" имеют уникальные данные\n",
+    "4. Все признаки за исключением \"Угол нашивки, град\" имеют много уникальных данных\n",
     "5. Признак \"Угол нашивки, град\" имеет два значения: 0 и 90. Возможно потребуется его перевести в категориальный признак.\n",
     "6. Все признаки за исключением \"Угол нашивки, град\" имеют выбросы. Для повышения точности алгоритмов возможно прийдется удалить их\n",
     "7. Все признаки очень слабокоррелированы как между собой так и с целевыми переменными. Целевые переменные между собой также слабокоррелированы.  \n"
